# ssrm

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  scan.yml
ssrm_test/: ssrm_test.py
