[project]
name = "ssrm_test"
version = "0.1.2"
description = "A library for Sequential Sample Ratio Mismatch (SRM) test."
authors = [
  {name = "Michael Lindon", email = "michael.lindon@optimizely.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "toolz>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "black-nbconvert>=0.2",
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "nbconvert>=7.16",
    "pandas>=2.1",
    "pre-commit>=3.5",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "Sphinx>=7.2",
    "sphinx_rtd_theme>=2.0",
    "m2r>=0.2.1",
]

[project.urls]
Repository = "https://github.com/jrnold/ssrm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ssrm_test"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
include = ["ssrm_test"]
exclude = ["**/__pycache__", ".venv"]
